# vector-forge

./: .gitignore  README.md  pyproject.toml
examples/: basic_extraction.py
tests/: conftest.py
tests/test_analysis/: test_diversity.py  test_quality.py
tests/test_core/: test_behavior.py  test_config.py  test_events.py  test_protocols.py  test_results.py  test_state.py
tests/test_llm/: test_mock_client.py
tests/test_storage/: test_store.py
tests/test_strategies/: test_noise_averaging.py  test_noise_pca.py
tests/test_tools/: test_base.py  test_registry.py
tests/test_types/: __init__.py  test_protocol_compliance.py  test_pydantic_models.py  test_storage_events.py
vector_forge/: __init__.py  cli.py  constants.py
vector_forge/agents/: __init__.py  extractor.py  judge.py
vector_forge/analysis/: __init__.py  diversity.py  quality.py
vector_forge/contrast/: __init__.py  pipeline.py  protocols.py  utils.py
vector_forge/core/: __init__.py  behavior.py  concurrency.py  config.py  events.py  protocols.py  results.py  state.py
vector_forge/llm/: __init__.py  base.py  litellm_client.py  mock_client.py
vector_forge/pipeline/: __init__.py  runner.py
vector_forge/services/: __init__.py  chat_service.py  extraction_runner.py  session.py  synchronizer.py  task_executor.py
vector_forge/storage/: __init__.py  config.py  emitter.py  events.py  log_builder.py  models.py  preferences.py  replay.py  store.py
vector_forge/strategies/: __init__.py
vector_forge/tasks/: __init__.py  adapter.py  batched_judge.py  config.py  elimination_runner.py  eval_judging_composer.py  eval_prompt_generator.py  eval_prompts.py  evaluation.py  expander.py  gpu_memory.py  runner.py  sample.py  task.py
vector_forge/tools/: __init__.py  base.py  control_tools.py  datapoint_tools.py  evaluation_tools.py  optimization_tools.py  registry.py
vector_forge/ui/: __init__.py  app.py  forge.tcss  (+5 more)
(+62 files in other folders)
