[project]
name = "vector-forge"
version = "0.1.0"
description = "Autonomous pipeline for extracting clean steering vectors from LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Vector Forge Contributors" }
]
keywords = [
    "llm",
    "steering-vectors",
    "activation-engineering",
    "interpretability",
    "alignment",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "steering-vectors",
    "litellm>=1.80.0",
    "pydantic>=2.12.0",
    "numpy>=2.0.0",
    "torch>=2.5.0",
    "sentence-transformers>=5.0.0",
    "scikit-learn>=1.6.0",
    "python-dotenv>=1.0.0",
    "textual>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
vector-forge = "vector_forge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vector_forge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
